@@ -1,3 +1,8 @@
+2006-02-07 Mikhail Khodjaiants
+	Bug 126789: Use new "fullname" attribute of stack frame description.
+	* MIStackListFrames.java
+	* MIFrame.java
+
 2006-02-06 Mikhail Khodjaiants
 	Suppress "set auto-solib" - returns error on Windows.
 	* StandardWinCommandFactory.java
